[project]
name = "mmes_creations"
version = "2026.1.17.1208"
requires-python = ">=3.14.2"
dependencies = [
    "asgiref==3.11.0",
    "coverage==7.13.1",
    "django==6.0.1",
    "execnet==2.1.2",
    "gunicorn==23.0.0",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-xdist==3.8.0",
    "python-dotenv==1.2.1",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
]

[tool.uv]
package = false

[tool.ruff]
extend-exclude = ["tests"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings"
python_files = "test_*.py"
